--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "10-TeamProfiler",
   "version": "1.0.0",
-  "description": "Your task is to build a Node.js command-line application that takes in information about employees on a software engineering team, then generates an HTML webpage that displays summaries for each person. Testing is key to making code maintainable, so you’ll also write a unit test for every part of your code and ensure that it passes each test.",
+  "description": "Apply OOP.",
   "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose test/*",
     "run": "node ./src/index.js"
   },
   "repository": {
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/sxtnkyl/10-TeamProfiler#readme",
   "dependencies": {
-    "inquirer": "^8.1.1",
+    "inquirer": "^8.1.1"
+  },
+  "devDependencies": {
     "jest": "^27.0.6"
   }
 }
